--- a/index.html
+++ b/index.html
@@ -395,11 +395,15 @@
                 </nav>
 
                 <div class="footer__contacts">
-                    <a href="https://www.spacex.com/" class="footer__contacts-website">spacex.com</a>
-                    <a href="https://www.blueorigin.com/" class="footer__contacts-website">blueorigin.com</a>
-                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website">virgingalactic.com</a>
+                    <a href="https://www.spacex.com/" class="footer__contacts-website" target="
+                    ">spacex.com</a>
+                    <a href="https://www.blueorigin.com/" class="footer__contacts-website" target="
+                    ">blueorigin.com</a>
+                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website" target="
+                    ">virgingalactic.com</a>
                     <p class="footer__number">0 800 000 000 00</p>
-                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website">МКС</a>
+                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website" target="
+                    ">МКС</a>
                 </div>
             </div>
         </footer>
