--- a/index.html
+++ b/index.html
@@ -395,14 +395,14 @@
                 </nav>
 
                 <div class="footer__contacts">
-                    <a href="https://www.spacex.com/" class="footer__contacts-website" target="
+                    <a href="https://www.spacex.com/" class="footer__contacts-website" target="_blank
                     ">spacex.com</a>
-                    <a href="https://www.blueorigin.com/" class="footer__contacts-website" target="
+                    <a href="https://www.blueorigin.com/" class="footer__contacts-website" target="_blank
                     ">blueorigin.com</a>
-                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website" target="
+                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website" target="_blank
                     ">virgingalactic.com</a>
                     <p class="footer__number">0 800 000 000 00</p>
-                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website" target="
+                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website" target="_blank
                     ">МКС</a>
                 </div>
             </div>
