--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>FIGMA | Макеты для верстки — Верстка страницы</title>
@@ -27,7 +27,7 @@
     </div>
     <!-- Конец -->
 
-    <section class="main">
+    <div class="main">
         
         <header class="header">
             <nav class="header__navbar">
@@ -47,8 +47,7 @@
         <section class="intro">
             <div class="intro__info">
                 <div class="intro__title">
-                    <h2 class="intro__title">КОСМИЧЕСКИЙ</h2>
-                    <h1 class="intro__title">ТУРИЗМ</h1>
+                    <h1 class="intro__title">КОСМИЧЕСКИЙ<br><span>ТУРИЗМ</span></h1>
                 </div>
                 <div class="intro__moto">
                     <p class="moto__phrase">Будущее уже наступило!</p>
@@ -242,7 +241,7 @@
 
         <section class="process">
             <div class="process__container">
-                <div class="process__title">Как все происходит</div>
+                <h2 class="process__title">Как все происходит</h2>
                 <img src="./img/process_img.png" alt="img" class="process_img">
             </div>
         </section>
@@ -367,7 +366,7 @@
                     <div class="form">
                         <input type="text" class="form__input name" placeholder="ФИО">
                         <input type="text" class="form__input relative-name" placeholder="Имя ребенка или внука (на всякий случай)">
-                        <input type="phone" class="form__input phone" placeholder="Телефон">
+                        <input type="tel" class="form__input phone" placeholder="Телефон">
                         <button class="button contacts">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
                     </div>
                     <img src="./img/contacts_photo-ilon.png" alt="photo" class="contacts__photo">
@@ -395,20 +394,14 @@
                 </nav>
 
                 <div class="footer__contacts">
-                    <a href="https://www.spacex.com/" class="footer__contacts-website" target="_blank
-                    ">spacex.com</a>
-                    <a href="https://www.blueorigin.com/" class="footer__contacts-website" target="_blank
-                    ">blueorigin.com</a>
-                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website" target="_blank
-                    ">virgingalactic.com</a>
+                    <a href="https://www.spacex.com/" class="footer__contacts-website" target="_blank">spacex.com</a>
+                    <a href="https://www.blueorigin.com/" class="footer__contacts-website" target="_blank">blueorigin.com</a>
+                    <a href="https://www.virgingalactic.com/" class="footer__contacts-website" target="_blank">virgingalactic.com</a>
                     <p class="footer__number">0 800 000 000 00</p>
-                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website" target="_blank
-                    ">МКС</a>
+                    <a href="https://www.roscosmos.ru/202/" class="footer__contacts-website" target="_blank">МКС</a>
                 </div>
             </div>
         </footer>
-
     </div>
-
 </body>
 </html>
