--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="title about">О НАС</h2>
                 
                 <div class="container virgin-galactic">
-                    <img src="./img/container_photo-virgin-galactic_small.png" width="500" height="540" alt="photo" class="container__photo virgin-galactic">
+                    <img src="./img/container_photo-virgin-galactic_small.webp" width="500" height="540" alt="photo" class="container__photo virgin-galactic">
                     <div class="container__info">
                         <h3 class="container__info-title">Virgin Galactic</h3>
                         <p class="container__info-subtitle">суборбитальный полет</p>
@@ -179,11 +179,11 @@
                         </div>
                         <button class="button blue-origin">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
                     </div>
-                    <img src="./img/container_photo-blue-origin_small.png" width="500" height="700" alt="photo" class="container__photo blue-origin">
+                    <img src="./img/container_photo-blue-origin_small.webp" width="500" height="700" alt="photo" class="container__photo blue-origin">
                 </div>
 
                 <div class="container space-x">
-                    <img src="./img/container_photo-space-x_small.png" width="500" height="603" alt="photo" class="container__photo space-x">
+                    <img src="./img/container_photo-space-x_small.webp" width="500" height="603" alt="photo" class="container__photo space-x">
                     <div class="container__info">
                         <h3 class="container__info-title">SpaceX</h3>
                         <p class="container__info-subtitle">А может на Луну или Марс?</p>
@@ -243,7 +243,7 @@
         <section class="process">
             <div class="process__container">
                 <h2 class="process__title">Как все происходит</h2>
-                <img src="./img/process_img.png" alt="img" class="process_img">
+                <img src="./img/process_img.webp" alt="img" class="process_img">
             </div>
         </section>
 
@@ -271,7 +271,7 @@
                             <p class="offer__item-text">
                                 Забронируй полет <span>прямо сейчас</span> <br>и получи скидку 1000$
                             </p>
-                            <img src="./img/old-price.png" alt="img" class="old-price">
+                            <img src="./img/old-price.webp" alt="img" class="old-price">
                             <p class="offer__item-price">249 000 $</p>
                         </div>
                         <button class="button offer">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
@@ -282,7 +282,7 @@
                             <p class="offer__item-text">
                                 Приведи друга и получи <span>скидку 10%</span> на следующий полет, если вернешься
                             </p>
-                            <img src="./img/old-price.png" alt="img" class="old-price">
+                            <img src="./img/old-price.webp" alt="img" class="old-price">
                             <p class="offer__item-price">225 000 $</p>
                         </div>
                         <button class="button offer">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
@@ -334,9 +334,9 @@
             <div class="slider__container">
                 <div class="slider__wrapper">
                     <div class="slider__box">
-                        <img src="./img/slider_arrow-next.png" width="100" height="1" alt="icon" class="slider__arrow next">
-                        <img src="./img/slider_photo-small.png" width="800" height="450" alt="photo" class="slider__photo">
-                        <img src="./img/slider_arrow-prev.png" width="100" height="1" alt="icon" class="slider__arrow prev">
+                        <img src="./img/slider_arrow-next.webp" width="100" height="1" alt="icon" class="slider__arrow next">
+                        <img src="./img/slider_photo-small.webp" width="800" height="450" alt="photo" class="slider__photo">
+                        <img src="./img/slider_arrow-prev.webp" width="100" height="1" alt="icon" class="slider__arrow prev">
                     </div>
                 </div>
                 <p class="slider__law">
@@ -370,7 +370,7 @@
                         <input type="tel" class="form__input phone" placeholder="Телефон">
                         <button class="button contacts">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
                     </div>
-                    <img src="./img/contacts_photo-ilon.png" width="396" height="396" alt="photo" class="contacts__photo">
+                    <img src="./img/contacts_photo-ilon.webp" width="396" height="396" alt="photo" class="contacts__photo">
                 </div>
             </div>
         </section>
